--- a/Lights/Resources/UI/Lights.ui
+++ b/Lights/Resources/UI/Lights.ui
@@ -161,10 +161,10 @@
          <double>0.100000000000000</double>
         </property>
         <property name="minimum">
-         <double>0.100000000000000</double>
+         <double>0.010000000000000</double>
         </property>
         <property name="maximum">
-         <double>1.000000000000000</double>
+         <double>2.000000000000000</double>
         </property>
         <property name="value">
          <double>1.000000000000000</double>
@@ -286,10 +286,10 @@
          <double>0.100000000000000</double>
         </property>
         <property name="minimum">
-         <double>0.100000000000000</double>
+         <double>0.010000000000000</double>
         </property>
         <property name="maximum">
-         <double>1.000000000000000</double>
+         <double>2.000000000000000</double>
         </property>
         <property name="value">
          <double>1.000000000000000</double>
@@ -411,10 +411,10 @@
          <double>0.100000000000000</double>
         </property>
         <property name="minimum">
-         <double>0.100000000000000</double>
+         <double>0.010000000000000</double>
         </property>
         <property name="maximum">
-         <double>1.000000000000000</double>
+         <double>2.000000000000000</double>
         </property>
         <property name="value">
          <double>1.000000000000000</double>
@@ -483,6 +483,12 @@ All lights are directional lights (infinitely far away with no falloff). Lights 
       <stringlist>
        <string>vtkMRMLViewNode</string>
       </stringlist>
+     </property>
+     <property name="addEnabled">
+      <bool>false</bool>
+     </property>
+     <property name="removeEnabled">
+      <bool>false</bool>
      </property>
     </widget>
    </item>
