--- a/CurvedPlanarReformat/Resources/UI/CurvedPlanarReformat.ui
+++ b/CurvedPlanarReformat/Resources/UI/CurvedPlanarReformat.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>413</width>
-    <height>245</height>
+    <height>271</height>
    </rect>
   </property>
   <layout class="QFormLayout" name="formLayout">
@@ -27,6 +27,9 @@
    </item>
    <item row="4" column="1">
     <widget class="qMRMLSliderWidget" name="curveResolutionSliderWidget">
+     <property name="focusPolicy">
+      <enum>Qt::TabFocus</enum>
+     </property>
      <property name="maximum">
       <double>10.000000000000000</double>
      </property>
@@ -54,6 +57,9 @@
    </item>
    <item row="7" column="1">
     <widget class="qMRMLSliderWidget" name="rotationAngleSliderWidget">
+     <property name="focusPolicy">
+      <enum>Qt::TabFocus</enum>
+     </property>
      <property name="decimals">
       <number>1</number>
      </property>
@@ -77,6 +83,9 @@
    </item>
    <item row="9" column="1">
     <widget class="qMRMLNodeComboBox" name="outputStraightenedVolumeSelector">
+     <property name="focusPolicy">
+      <enum>Qt::TabFocus</enum>
+     </property>
      <property name="toolTip">
       <string>Pick the output to the algorithm.</string>
      </property>
@@ -88,8 +97,11 @@
      <property name="showChildNodeTypes">
       <bool>false</bool>
      </property>
+     <property name="baseName">
+      <string>Straightened volume</string>
+     </property>
      <property name="noneEnabled">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
      <property name="addEnabled">
       <bool>true</bool>
@@ -111,6 +123,9 @@
    </item>
    <item row="10" column="1">
     <widget class="qMRMLNodeComboBox" name="outputProjectedVolumeSelector">
+     <property name="focusPolicy">
+      <enum>Qt::TabFocus</enum>
+     </property>
      <property name="toolTip">
       <string>Pick the output to the algorithm.</string>
      </property>
@@ -121,6 +136,9 @@
      </property>
      <property name="showChildNodeTypes">
       <bool>false</bool>
+     </property>
+     <property name="baseName">
+      <string>Projected volume</string>
      </property>
      <property name="noneEnabled">
       <bool>true</bool>
@@ -153,6 +171,9 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="qMRMLNodeComboBox" name="inputCurveSelector">
+       <property name="focusPolicy">
+        <enum>Qt::TabFocus</enum>
+       </property>
        <property name="toolTip">
         <string>Pick the input to the algorithm.</string>
        </property>
@@ -189,6 +210,9 @@
    </item>
    <item row="0" column="1">
     <widget class="qMRMLNodeComboBox" name="inputVolumeSelector">
+     <property name="focusPolicy">
+      <enum>Qt::TabFocus</enum>
+     </property>
      <property name="toolTip">
       <string>Background layer of this slice view will be reformatted</string>
      </property>
@@ -217,6 +241,9 @@
    </item>
    <item row="5" column="1">
     <widget class="qMRMLSliderWidget" name="sliceResolutionSliderWidget">
+     <property name="focusPolicy">
+      <enum>Qt::TabFocus</enum>
+     </property>
      <property name="maximum">
       <double>10.000000000000000</double>
      </property>
@@ -230,6 +257,9 @@
    </item>
    <item row="6" column="1">
     <widget class="qMRMLCoordinatesWidget" name="sliceSizeCoordinatesWidget">
+     <property name="focusPolicy">
+      <enum>Qt::TabFocus</enum>
+     </property>
      <property name="dimension">
       <number>2</number>
      </property>
@@ -284,6 +314,17 @@
    <header>qSlicerMarkupsPlaceWidget.h</header>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>inputVolumeSelector</tabstop>
+  <tabstop>inputCurveSelector</tabstop>
+  <tabstop>curveResolutionSliderWidget</tabstop>
+  <tabstop>sliceResolutionSliderWidget</tabstop>
+  <tabstop>sliceSizeCoordinatesWidget</tabstop>
+  <tabstop>rotationAngleSliderWidget</tabstop>
+  <tabstop>outputStraightenedVolumeSelector</tabstop>
+  <tabstop>outputProjectedVolumeSelector</tabstop>
+  <tabstop>applyButton</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
