--- a/CombineModels/Resources/UI/CombineModels.ui
+++ b/CombineModels/Resources/UI/CombineModels.ui
@@ -213,6 +213,19 @@
     </widget>
    </item>
    <item>
+    <widget class="QPushButton" name="toggleVisibilityButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="toolTip">
+      <string>Toggles between showing input models or output model</string>
+     </property>
+     <property name="text">
+      <string>Toggle inputs/output visibility</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
